--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,16 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.card{
+  padding: 1em;
+  border-radius: 13px;
+  border: 1px solid grey;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+.grid{
+  max-width: 120rem ;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  gap: 1.6rem;
+}
+
