--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -27,4 +27,9 @@ th {
 .meals-img{
   width: 300px;
   border-radius: 13px;
+}
+input{
+  padding: 12px;
+  border-radius: 12px;
+  margin-bottom: 12px;
 }
